test updates & docs